# Enrollment

./: .env  Dockerfile  JustMarkIt.db  Makefile  README.md  definitions.py  docker-compose.yaml  openapi.yaml  pyproject.toml
app/: config.py  main.py
app/api/routes/: api.py  delete_api.py  import_api.py  nodes_api.py
app/api/schemas/: responses.py  shop_unit_schema.py
app/core/: engine.py  models.py
