[tool.poetry]
name = "enrollment"
version = "0.1.0"
description = ""
authors = ["valdonych <balunov239@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
uvicorn = "^0.17.6"
fastapi-utils = "^0.2.1"
SQLAlchemy-Utils = "^0.38.2"
loguru = "^0.6.0"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
